docs/envoy/v1.20.4/_sources/intro/arch_overview/security/secpos_requires_trusted_downstream_and_upstream.rst.txt
* :ref:`envoy.clusters.aggregate <extension_envoy.clusters.aggregate>`
* :ref:`envoy.clusters.redis <extension_envoy.clusters.redis>`
* :ref:`envoy.filters.http.aws_lambda <extension_envoy.filters.http.aws_lambda>` (alpha)
* :ref:`envoy.filters.http.aws_request_signing <extension_envoy.filters.http.aws_request_signing>` (alpha)
* :ref:`envoy.filters.http.dynamo <extension_envoy.filters.http.dynamo>`
* :ref:`envoy.filters.http.squash <extension_envoy.filters.http.squash>` (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.filters.http.tap <extension_envoy.filters.http.tap>` (alpha)
* :ref:`envoy.filters.listener.http_inspector <extension_envoy.filters.listener.http_inspector>`
* :ref:`envoy.filters.network.dubbo_proxy <extension_envoy.filters.network.dubbo_proxy>` (alpha)
* :ref:`envoy.filters.network.mongo_proxy <extension_envoy.filters.network.mongo_proxy>`
* :ref:`envoy.filters.network.mysql_proxy <extension_envoy.filters.network.mysql_proxy>` (alpha) (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.filters.network.postgres_proxy <extension_envoy.filters.network.postgres_proxy>` (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.filters.network.redis_proxy <extension_envoy.filters.network.redis_proxy>`
* :ref:`envoy.filters.network.rocketmq_proxy <extension_envoy.filters.network.rocketmq_proxy>` (alpha) (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.filters.network.sip_proxy <extension_envoy.filters.network.sip_proxy>` (alpha) (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.filters.network.thrift_proxy <extension_envoy.filters.network.thrift_proxy>`
* :ref:`envoy.filters.network.zookeeper_proxy <extension_envoy.filters.network.zookeeper_proxy>` (alpha)
* :ref:`envoy.filters.sip.router <extension_envoy.filters.sip.router>` (alpha) (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.filters.thrift.ratelimit <extension_envoy.filters.thrift.ratelimit>` (alpha)
* :ref:`envoy.filters.thrift.router <extension_envoy.filters.thrift.router>`
* :ref:`envoy.health_checkers.redis <extension_envoy.health_checkers.redis>`
* :ref:`envoy.tls.cert_validator.spiffe <extension_envoy.tls.cert_validator.spiffe>` (alpha)
* :ref:`envoy.transport_sockets.raw_buffer <extension_envoy.transport_sockets.raw_buffer>`
* :ref:`envoy.transport_sockets.tap <extension_envoy.transport_sockets.tap>` (alpha)